# wToolsJsArchive

./: .gitignore
w4d/: README.md  package.json
wArraySorted/: package.json  was.package.json  will.yml
wArraySparse/: package.json  was.package.json  will.yml
wBase/: Readme.md  package.json  will.yml
wBitmask/: Readme.md  package.json  was.package.json  will.yml
wBlueprint/: package.json  was.package.json  will.yml
wBoarding/: README.md  was.package.json
wCensor/: Readme.md  package.json  was.package.json  will.yml
wCensorBasic/: Readme.md  package.json  was.package.json  will.yml
wChangeTransactor/: Readme.md  package.json  was.package.json  will.yml
wCloner/: package.json  was.package.json  will.yml
wColor256/: package.json  was.package.json  will.yml
wCommandsAggregator/: Cargo.toml  Readme.md  package.json  was.package.json  will.yml
wCommandsAggregator/module/rust/wca/: Cargo.toml  Readme.md
wCommandsConfig/: Readme.md  package.json  was.package.json  will.yml
wCommunicator/: Readme.md  package.json  was.package.json  will.yml
wCompiler/: .ex.will.yml  .im.will.yml  README.md  package.json  was.package.json
wConsole/: .ex.will.yml  .im.will.yml  README.md  package.json  was.package.json
wCopyable/: package.json  was.package.json  will.yml
wDecode/: .ex.will.yml  .im.will.yml  README.md  package.json  was.package.json
wDecoder/: .ex.will.yml  .im.will.yml  README.md  package.json  was.package.json
wDeployer/: .ex.will.yml  .im.will.yml  README.md  was.package.json
wDo/: README.md  package.json
wDoc/: README.md  was.package.json
wDocGenerator/: Readme.md  package.json  was.package.json  webpack.config.js  will.yml
wDocParser/: package.json  was.package.json
wDomBasic/: Readme.md  package.json  was.package.json  will.yml
wDownloaderOfCourses/: README.md  package.json
wDoxa/: .ex.will.yml  .im.will.yml  README.md  package.json  was.package.json
wEidos/: .ex.will.yml  .im.will.yml  README.md  package.json  was.package.json
wEncode/: .ex.will.yml  .im.will.yml  README.md  package.json  was.package.json
wEncoder/: .ex.will.yml  .im.will.yml  README.md  package.json  was.package.json
wEntityBasic/: Readme.md  package.json  was.package.json  will.yml
wExperiment/: Index.js  package.json
wFieldsStack/: package.json  was.package.json  will.yml
wFileExecutor/: Readme.md  package.json  was.package.json  will.yml
wFiler/: .ex.will.yml  .im.will.yml  README.md  package.json  was.package.json
wFilesArchive/: package.json  was.package.json  will.yml
wFilesBasic/: Readme.md  package.json  was.package.json  will.yml
wFilesEncoders/: Readme.md  package.json  was.package.json  will.yml
wFilesExtra/: .ex.will.yml  .im.will.yml  README.md  package.json  was.package.json
wFilesExtract/: .ex.will.yml  .im.will.yml  README.md  package.json  was.package.json
wSelector/module/rust/wselector/: Cargo.toml  Readme.md
(+1886 files in other folders)
