[package]
name = "wca"
version = "0.1.0"
edition = "2018"
authors = ["Kostiantyn Wandalen <wandalen@obox.systems>", "Volodymyr M. <volodymyr.migdal@gmail.com>", "Dmytro Kryvoruchko <dm.vict.kr@gmail.com>" ]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/wca"
repository = "https://github.com/dmvict/wCommandsAggregator/tree/master/module/rust/wca"
homepage = "https://github.com/dmvict/wCommandsAggregator/tree/master/module/rust/wca/Readme.md"
description = """
The tool to make CLI ( commands user interface ). It is able to aggregate external binary applications, as well as functions, which are written in your language.
"""
categories = [ "command-line-interface", "command-line-utilities" ]
keywords = [ "wtools", "CLI", "CUI", "user-interface" ]

include = [
  "/rust/impl/ca",
  "/Cargo.toml",
  "/Readme.md",
  "/License",
]

[lib]
name = "wca"
path = "rust/impl/ca/mod.rs"

[[test]]
name = "wca_test"
path = "rust/test/ca/mod.rs"

[dependencies]
wtools = "0.1.0"
former = { git = "https://github.com/dmvict/wTools", branch = "parse" } # replace by registry crate after publish
wstring_tools = { git = "https://github.com/dmvict/wTools", branch = "parse" } # replace by registry crate after publish
maplit = "1.0.2"

[dev-dependencies]
wtest_basic = "~0.1"
