[package]
name = "wselector"
version = "0.1.0"
edition = "2018"
authors = ["Kostiantyn Wandalen <wandalen@obox.systems>", "Volodymyr M. <volodymyr.migdal@gmail.com>", "Dmytro Kryvoruchko <dm.vict.kr@gmail.com>" ]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/wselector"
repository = "https://github.com/wSelector"
homepage = "https://github.com/wSelector"
description = """
Collection of cross-platform routines to select a sub-structure from a complex data structure. Use the module to transform a data structure with the help of a short query string.
"""
categories = [ "command-line-interface", "command-line-utilities" ]
keywords = [ "wtools", "query" ]

[package.metadata.docs.rs]
all-features = true

include = [
  "/rust/impl/selector",
  "/Cargo.toml",
  "/Readme.md",
  "/License",
]

[features]
default = [ "use_std" ]
full = [ "use_std", "use_alloc" ]
use_std = []
use_alloc = []

[lib]
name = "wselector"
path = "rust/impl/selector/wselector_lib.rs"

[[bin]]
name = "selector"
path = "rust/impl/selector/wselector_entry.rs"

[[test]]
name = "wselector_test"
path = "rust/test/selector/wselector_tests.rs"

[[example]]
name = "wselector_trivial_sample"
path = "sample/rust/wselector_trivial_sample/src/main.rs"

[dependencies]
failure = "0.1"
nom = "5.1"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
structopt = "0.3"
toml_edit = "0.2"

[dev-dependencies]
test_tools = { version = "~0.1" }
